# hula-sync

./: Cargo.toml  Jenkinsfile  README.md
migrations/2021-05-05-075333_add_test/: up.sql
migrations/2021-05-05-080602_add_primary/: up.sql
migrations/2021-06-05-130419_setup/: up.sql
migrations/2021-06-07-143618_hubspot/: up.sql
migrations/2021-09-02-062559_hula_call_log/: up.sql
migrations/2021-09-04-061758_odoo_call_log/: up.sql
migrations/2021-12-09-084221_odoo_call_log_longer_params/: down.sql  up.sql
src/: background.rs  errors.rs  handlers.rs  hulautils.rs  main.rs  models.rs  modules.rs  schema.rs
src/handlers/: odoo_handler.rs  test_handler.rs
src/models/: hubspot_project.rs  hula_call_log.rs  odoo_call_log.rs  odoo_project.rs  test.rs
src/modules/: hubspot.rs  odoo.rs
src/modules/hubspot/: hubspot_module.rs
src/modules/odoo/: odoo_module.rs
src/modules/odoo/python/: odoo.py  odoo_fill_project_skills.py  odoo_get.py  odoo_put.py  odoo_put_skills.py  requirements.txt
src/python/: test1.py  test2.py
