[package]
name = "hula-sync"
version = "0.1.0"
authors = ["Ninjapiraatti <tuoppil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1"
actix-web = "3.3"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3.8"
r2d2 = "0.8"
reqwest = { version = "0.11.3", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.5.0", features = ["full"] } 
uuid = { version = "0.8", features = ["serde", "v4"] }
xmlrpc = "0.15.0"
