[package]
name = "hula-sync"
version = "0.1.0"
authors = ["Ninjapiraatti <tuoppil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.7.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3.8"
r2d2 = "0.8"
reqwest = { version = "0.11.3", features = ["json", "cookies"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.5.0", features = ["full"] } 
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.2.2"
